# AIC

./: .env.example  .gitignore  AIC_all_in_one.ipynb  BRUTAL_HACKATHON_AUDIT.md  COLAB_GPU_RUNBOOK.md  DESIGN.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_SUBMISSION.md  GRAPHIFY.md  HACKATHON_TODO_PRIORITY.md  LEGENDARY_MASTERPLAN.md  PHASE0_TO_PHASE3_PREPHASE4_AUDIT.md  PHASE0_TO_PHASE3_REMEDIATION_TASKS.md  QUICK_FIXES_NEEDED.md  README.md  REMAINING_GAPS.md  VIDEO_SCRIPT.md  app.py  hf_space_readme.md  inference.py  judge_colab.ipynb  latestPlan.md  openenv.yaml  plan.md  pyproject.toml  report.md  requirements.txt  run_hackathon.py  run_hackathon.sh  run_training_smoke.py  train_colab.ipynb
checkpoints/: checkpoint_ep004.json  checkpoint_ep009.json
dashboard/: app.py
deploy/: Dockerfile  deploy_instructions.md
eval/: test_export.py
hf_dashboard_space/: Dockerfile  README.md  nginx.conf
hf_env_space/: Dockerfile  README.md  requirements-runtime.txt  start.sh
judging-criteria/: more.txt
logs/: arena_results.json  benchmark_results.csv  curriculum.jsonl  episode_0000.jsonl  episode_0000_summary.json  episode_0001.jsonl  episode_0001_summary.json  episode_0002.jsonl  episode_0002_summary.json  episode_0003_summary.json  episode_0004_summary.json  episode_0005_summary.json  episode_0006_summary.json  episode_0007_summary.json  episode_0008_summary.json  episode_0009_summary.json  episode_0010_summary.json  episode_0011_summary.json  episode_0012_summary.json  episode_0013_summary.json  episode_0014_summary.json  episode_0015_summary.json  (+118 more)
phases/: changes.md  (+10 more)
(+243 files in other folders)
