[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aic"
version = "0.1.0"
description = "Adaptive Incident Choreographer — RL-driven multi-agent incident response"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
