[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aic"
version = "0.1.0"
description = "Adaptive Incident Choreographer — RL-driven multi-agent incident response"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
    "pydantic>=2.7,<3",
    "uvicorn>=0.32",
]

[project.scripts]
aic-openenv-server = "server.app:main"
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
