[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aic"
version = "0.1.0"
description = "Adaptive Incident Choreographer — RL-driven multi-agent incident response"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.7,<3",
    "numpy>=1.26",
    "rich>=13.9",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
